<resources>
    <string name="app_name">What can you see?</string>
    <string name="title_activity_game_won">GameWonActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_choose_game">ChooseGameActivity</string>
    <string name="signin_other_error">can\'t sign in</string>
    <string name="status_multiplayer_error_not_trusted_tester">Multplayer error not truster tester</string>
    <string name="match_error_already_rematched">Match error already rematched</string>
    <string name="network_error_operation_failed">Network error</string>
    <string name="internal_error">Internal error</string>
    <string name="match_error_inactive_match">Innactive match</string>
    <string name="match_error_locally_modified">localy modified</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="is_inviting_you">Is inviting you</string>
    <string name="game_problem">Problem game</string>
    <string name="leaderboards_exception">Error accessing leaderboards</string>
    <string name="achievements_exception">Error accessing achievements</string>
    <string name="invite_friend">invite friend</string>
    <string name="show_invitations">show invitations</string>
    <string name="show_achievements">Show achievements</string>
    <string name="show_leaderboards">Show leaderboards</string>
    <string name="sign_out">sign out</string>
    <string name="please_wait">please wait</string>
    <string name="accept_invite">Accept invite</string>
    <string name="decline_invite">Decline invite</string>
    <string name="find_game">Find game</string>
    <string name="debug_games">Debug games</string>
    <string name="maze_game_explorer">Maze Game Explorer</string>
    <string name="open_the_door">open the door</string>
    <string name="give_up">give up</string>
    <string name="show_map">show map</string>
    <string name="use">USE</string>
    <string name="down">DOWN</string>
    <string name="left">LEFT</string>
    <string name="up">UP</string>
    <string name="right">RIGHT</string>
</resources>
