<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameactivity.GameActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Image views -->
        <ru.ralsei.whatcanyousee.SquareTableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/upButton"
            android:id="@+id/cellImages"
            android:stretchColumns="*"
            app:layout_constraintDimensionRatio="h,1:1"
            >

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage60"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage61"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage62"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage63"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage64"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage65"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage66"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>

            <TableRow android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage51"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage52"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage53"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage54"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage55"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage56"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>

            <TableRow android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage40"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage41"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage42"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage43"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage44"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage45"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage46"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>

            <TableRow android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage30"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage31"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage32"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage33"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage34"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage35"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage36"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>

            <TableRow android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage21"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage23"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage25"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage26"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/cellImage00"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage04"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage05"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />

                <ImageView
                    android:id="@+id/cellImage06"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/emptycell" />
            </TableRow>
        </ru.ralsei.whatcanyousee.SquareTableLayout>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/upButton"
            android:layout_above="@id/rightButton"
            android:layout_centerHorizontal="true"
            android:text="@string/up"/>

        <Button
            android:id="@+id/rightButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/downButton"
            android:layout_toEndOf="@id/useButton"
            android:text="@string/right"/>

        <Button
            android:id="@+id/leftButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/downButton"
            android:layout_toStartOf="@id/useButton"
            android:text="@string/left"/>

        <Button
            android:id="@+id/downButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/down"/>


        <Button
            android:id="@+id/useButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/downButton"
            android:layout_centerHorizontal="true"
            android:text="@string/use"/>

        <Button
            android:id="@+id/button_show_map"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/downButton"
            android:layout_below="@id/rightButton"
            android:text="@string/show_map"/>

        <Button
            android:id="@+id/button_giveUp_maze"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:layout_below="@id/rightButton"
            android:text="@string/give_up" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_maze_map"
            android:layout_alignParentTop="true"
            android:layout_above="@id/upButton"
            android:visibility="invisible"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>